# Simple-RESTful-API-in-Python-FastAPI

./: README.md  setup.cfg
backend/: Dockerfile  add_role.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/src/: config.py  db.py  main.py  routers.py  utils.py
backend/src/auth/: auth_config.py  manager.py  models.py  routers.py  schemas.py  utils.py
backend/src/social/: models.py  routers.py  schemas.py
backend/src/tasks/: routers.py  tasks.py
backend/tests/: conftest.py  test_routers.py
infra/: docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.yml
